# nebari-mlflow-plugin

./: .gitignore  README.md  pyproject.toml
.github/actions/init-local/: action.yml
.github/workflows/: publish-docker-image.yaml  release.yaml  test_aws_integration.yaml  test_azure_mlflow_integration.yaml  test_gcp_mlflow_integration.yaml  test_local_integration.yaml  test_local_integration_old.yaml
docker/: Dockerfile
src/nebari_mlflow_plugin/: __init__.py
src/nebari_mlflow_plugin/template/aws/: main.tf  variables.tf  versions.tf
src/nebari_mlflow_plugin/template/aws/modules/mlflow/: main.tf  variables.tf
src/nebari_mlflow_plugin/template/azure/: main.tf  values.yaml  variables.tf
src/nebari_mlflow_plugin/template/gcp/: main.tf  outputs.tf  values.yaml  variables.tf  versions.tf
src/nebari_mlflow_plugin/template/local/: main.tf  outputs.tf  shared_helm_values.yaml  variables.tf
src/nebari_plugin_mlflow/: __init__.py
src/nebari_plugin_mlflow/template/azure/: values.yaml  variables.tf
src/nebari_plugin_mlflow_aws/: __init__.py
src/nebari_plugin_mlflow_aws/cfg/: __init__.py
src/nebari_plugin_mlflow_aws/template/azure/: main.tf  values.yaml  variables.tf  versions.tf
src/nebari_plugin_mlflow_aws/terraform/: main.tf  variables.tf
src/nebari_plugin_mlflow_aws/terraform/modules/keycloak/: outputs.tf
src/nebari_plugin_mlflow_aws/terraform/modules/mlflow/: main.tf  variables.tf
src/nebari_plugin_mlflow_aws/terraform/modules/mlflow/chart/: values.yaml
src/nebari_plugin_mlflow_aws/terraform/modules/mlflow/chart/templates/: deployment.yaml  postgres.yaml
tests/unit/: test_plugin.py
webhook-listener/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  pixi.toml  pyproject.toml
webhook-listener/docker-compose/: .env.example  .gitignore  Makefile  README.md  compose.yaml
webhook-listener/docker-compose/listener/: Dockerfile  listener.py  start-listener.sh
webhook-listener/docker-compose/model-create/: Dockerfile  model-create.py
webhook-listener/k8s/: CUSTOMIZATION.md  README.md  configmap.yaml  deployment.yaml  rbac.yaml  service.yaml
webhook-listener/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  secret.yaml.example  service.yaml
webhook-listener/k8s/overlays/default/: deployment-patch.yaml  kustomization.yaml
webhook-listener/k8s/overlays/examples/aws/: deployment-patch.yaml
webhook-listener/k8s/overlays/examples/azure/: deployment-patch.yaml
webhook-listener/k8s/overlays/examples/gcp/: deployment-patch.yaml  kustomization.yaml
webhook-listener/k8s/overlays/ot-nebari/: README.md  certificate.yaml  deployment-patch.yaml  ingressroute.yaml  kustomization.yaml  middleware.yaml  namespace.yaml
webhook-listener/models-web-app/: README.md
webhook-listener/models-web-app/.claude/: settings.local.json
webhook-listener/src/: __init__.py  config.py  kubernetes_client.py  main.py  mlflow_client.py  polling_service.py  templates.py  timeout_utils.py  webhook_handler.py
webhook-listener/templates/: inference_service.yaml.j2
webhook-listener/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_config_autogen.py  test_kubernetes_client.py  test_mlflow_client.py  test_polling_service.py  test_templates.py  test_timeout_utils.py  test_webhook_handler.py
