[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nebari-mlflow-webhook-listener"
version = "0.1.0"
description = 'Webhook listener service for Nebari MLflow Plugin'
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Adam Lewis", email = "adam.dudley.lewis@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi",
  "mlflow",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "jupyterlab",
  "scikit-learn",
  "pandas",
  "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.default.scripts]
dev = "uvicorn app:app --reload"
